[gd_scene load_steps=35 format=2]

[ext_resource path="res://resources/models/phone_bg.jpg" type="Texture" id=1]
[ext_resource path="res://entities/player/time.gd" type="Script" id=2]
[ext_resource path="res://resources/UI/signal.png" type="Texture" id=3]
[ext_resource path="res://entities/player/PhoneUI.gd" type="Script" id=4]
[ext_resource path="res://resources/fonts/PhoneUI_font.tres" type="DynamicFontData" id=5]
[ext_resource path="res://resources/UI/notch.png" type="Texture" id=6]
[ext_resource path="res://entities/player/PhoneIcon.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/Music/cover1.jpg" type="Texture" id=8]
[ext_resource path="res://resources/UI/Phone_UI_Play.png" type="Texture" id=9]
[ext_resource path="res://resources/UI/Phone_UI_Previous.png" type="Texture" id=10]
[ext_resource path="res://resources/UI/Phone_UI_Next.png" type="Texture" id=11]
[ext_resource path="res://resources/UI/Phone_UI_Next_Hover.png" type="Texture" id=12]
[ext_resource path="res://resources/UI/Phone_UI_Next_Clicked.png" type="Texture" id=13]
[ext_resource path="res://resources/UI/Phone_UI_Stop.png" type="Texture" id=14]
[ext_resource path="res://entities/player/PhoneScroll.gd" type="Script" id=15]
[ext_resource path="res://resources/UI/Phone_UI_Previous_Hover.png" type="Texture" id=16]
[ext_resource path="res://resources/UI/Phone_UI_Previous_Clicked.png" type="Texture" id=17]
[ext_resource path="res://entities/player/PhoneUIMusicButton.gd" type="Script" id=18]
[ext_resource path="res://resources/UI/Phone_UI_Home.png" type="Texture" id=19]
[ext_resource path="res://resources/UI/Phone_UI_Camera_Icon.png" type="Texture" id=20]
[ext_resource path="res://resources/UI/Phone_UI_Chat_Icon.png" type="Texture" id=21]
[ext_resource path="res://entities/player/ChatSentMessage.tscn" type="PackedScene" id=22]
[ext_resource path="res://entities/player/ChatReceivedMessage.tscn" type="PackedScene" id=23]
[ext_resource path="res://entities/player/PhoneChat.gd" type="Script" id=26]
[ext_resource path="res://entities/player/PhoneMusic.gd" type="Script" id=27]
[ext_resource path="res://entities/player/ChatChoiceButton.tscn" type="PackedScene" id=28]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="Theme" id=5]
ScrollContainer/styles/bg = null
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 3 )
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 4 )
VScrollBar/styles/scroll_focus = null

[sub_resource type="DynamicFont" id=6]
size = 32
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Theme" id=8]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.137255, 0.137255, 0.137255, 0.2 )
Button/colors/font_color_hover = Color( 0.184314, 0.184314, 0.184314, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 6 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = SubResource( 7 )
Button/styles/pressed = null

[node name="PhoneUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -256.0
margin_bottom = 304.0
rect_pivot_offset = Vector2( 516, 516 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 512.0
margin_bottom = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TextureRect"]
margin_right = 509.0
margin_bottom = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="ColorRect" parent="HBoxContainer/TextureRect/VBoxContainer"]
margin_right = 509.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="Notification" type="ColorRect" parent="HBoxContainer/TextureRect/VBoxContainer"]
margin_top = 100.0
margin_right = 509.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 0
color = Color( 0.501961, 0.501961, 0.501961, 0.705882 )

[node name="time" type="Label" parent="HBoxContainer/TextureRect/VBoxContainer/Notification"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -60.0
custom_fonts/font = SubResource( 1 )
text = "00:00"
align = 2
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fakeInfo" type="Label" parent="HBoxContainer/TextureRect/VBoxContainer/Notification"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
size_flags_horizontal = 8
custom_fonts/font = SubResource( 1 )
text = "AC&C"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/TextureRect/VBoxContainer/Notification"]
margin_left = 130.461
margin_top = 0.052597
margin_right = 162.461
margin_bottom = 32.0526
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/TextureRect/VBoxContainer/Notification"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -22.0
margin_right = 0.154053
margin_bottom = -14.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Control" parent="HBoxContainer/TextureRect/VBoxContainer"]
margin_top = 140.0
margin_right = 509.0
margin_bottom = 860.0
size_flags_vertical = 3

[node name="Home" type="MarginContainer" parent="HBoxContainer/TextureRect/VBoxContainer/Content"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 60
custom_constants/margin_top = 40
custom_constants/margin_left = 60

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Home"]
margin_left = 60.0
margin_top = 40.0
margin_right = 449.0
margin_bottom = 720.0
custom_constants/vseparation = 30
custom_constants/hseparation = 23
columns = 4

[node name="MusicIcon" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Home/GridContainer" instance=ExtResource( 7 )]
iconTex = ExtResource( 9 )
title = "Music"
app = NodePath("../../../Music")

[node name="ChatIcon" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Home/GridContainer" instance=ExtResource( 7 )]
margin_left = 103.0
margin_right = 183.0
iconTex = ExtResource( 21 )
title = "Chat"
app = NodePath("../../../Chat")

[node name="CameraIcon" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Home/GridContainer" instance=ExtResource( 7 )]
margin_left = 206.0
margin_right = 286.0
iconTex = ExtResource( 20 )
title = "Camera"

[node name="Music" type="Control" parent="HBoxContainer/TextureRect/VBoxContainer/Content"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 600.0
margin_bottom = 600.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 254, 360 )
script = ExtResource( 27 )

[node name="Background" type="ColorRect" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Music"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.254902, 0.254902, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Music"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlbumCover" type="TextureRect" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Music/VBoxContainer"]
margin_right = 429.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
stretch_mode = 6

[node name="Title" type="Label" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Music/VBoxContainer"]
margin_top = 444.0
margin_right = 429.0
margin_bottom = 482.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Lazy Day"
align = 1
clip_text = true

[node name="MusicControls" type="HBoxContainer" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Music/VBoxContainer"]
margin_top = 542.0
margin_right = 429.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Previous" type="TextureButton" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Music/VBoxContainer/MusicControls"]
margin_left = 10.0
margin_right = 143.0
margin_bottom = 98.0
rect_min_size = Vector2( 133, 96 )
rect_pivot_offset = Vector2( 66, 48 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 16 )
texture_focused = ExtResource( 16 )
expand = true
stretch_mode = 5
script = ExtResource( 18 )

[node name="PlayPause" type="TextureButton" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Music/VBoxContainer/MusicControls"]
margin_left = 147.0
margin_right = 280.0
margin_bottom = 98.0
rect_min_size = Vector2( 133, 96 )
rect_pivot_offset = Vector2( 66, 48 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 14 )
expand = true
stretch_mode = 5
script = ExtResource( 18 )

[node name="Next" type="TextureButton" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Music/VBoxContainer/MusicControls"]
margin_left = 284.0
margin_right = 419.0
margin_bottom = 98.0
rect_min_size = Vector2( 135, 96 )
rect_pivot_offset = Vector2( 66, 48 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 12 )
texture_focused = ExtResource( 12 )
expand = true
stretch_mode = 5
script = ExtResource( 18 )

[node name="Chat" type="Control" parent="HBoxContainer/TextureRect/VBoxContainer/Content"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 600.0
margin_bottom = 600.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 254, 360 )
rect_clip_content = true
script = ExtResource( 26 )

[node name="Background" type="ColorRect" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.764706, 1, 0.686275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 30

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer"]
margin_right = 509.0
margin_bottom = 604.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 5 )
scroll_horizontal_enabled = false
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messages" type="VBoxContainer" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer"]
margin_right = 509.0
margin_bottom = 1370.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 22 )]
margin_left = 94.0
margin_right = 414.0

[node name="Message1" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 23 )]
margin_left = 94.0
margin_right = 414.0

[node name="Message2" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 22 )]
margin_left = 94.0
margin_top = 140.0
margin_right = 414.0
margin_bottom = 180.0

[node name="Message3" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 23 )]
margin_left = 94.0
margin_top = 210.0
margin_right = 414.0
margin_bottom = 250.0

[node name="Message4" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 22 )]
margin_left = 94.0
margin_top = 280.0
margin_right = 414.0
margin_bottom = 320.0

[node name="Message5" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 23 )]
margin_left = 94.0
margin_top = 350.0
margin_right = 414.0
margin_bottom = 390.0

[node name="Message6" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 22 )]
margin_left = 94.0
margin_top = 420.0
margin_right = 414.0
margin_bottom = 460.0

[node name="Message7" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 23 )]
margin_left = 94.0
margin_top = 490.0
margin_right = 414.0
margin_bottom = 530.0

[node name="Message8" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 22 )]
margin_left = 94.0
margin_top = 560.0
margin_right = 414.0
margin_bottom = 600.0

[node name="Message9" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 23 )]
margin_left = 94.0
margin_top = 630.0
margin_right = 414.0
margin_bottom = 670.0

[node name="Message10" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 22 )]
margin_left = 94.0
margin_top = 700.0
margin_right = 414.0
margin_bottom = 740.0

[node name="Message11" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 23 )]
margin_left = 94.0
margin_top = 770.0
margin_right = 414.0
margin_bottom = 810.0

[node name="Message12" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 22 )]
margin_left = 94.0
margin_top = 840.0
margin_right = 414.0
margin_bottom = 880.0

[node name="Message13" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 23 )]
margin_left = 94.0
margin_top = 910.0
margin_right = 414.0
margin_bottom = 950.0

[node name="Message14" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 22 )]
margin_left = 94.0
margin_top = 980.0
margin_right = 414.0
margin_bottom = 1020.0

[node name="Message15" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 23 )]
margin_left = 94.0
margin_top = 1050.0
margin_right = 414.0
margin_bottom = 1090.0

[node name="Message16" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 22 )]
margin_left = 94.0
margin_top = 1120.0
margin_right = 414.0
margin_bottom = 1160.0

[node name="Message17" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 23 )]
margin_left = 94.0
margin_top = 1190.0
margin_right = 414.0
margin_bottom = 1230.0

[node name="Message18" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 22 )]
margin_left = 94.0
margin_top = 1260.0
margin_right = 414.0
margin_bottom = 1300.0

[node name="Message19" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ScrollContainer/Messages" instance=ExtResource( 23 )]
margin_left = 94.0
margin_top = 1330.0
margin_right = 414.0
margin_bottom = 1370.0

[node name="ReplyBox" type="HBoxContainer" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer"]
margin_top = 634.0
margin_right = 509.0
theme = SubResource( 8 )

[node name="Choices" type="VBoxContainer" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ReplyBox"]
margin_right = 433.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="ChoiceButton" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ReplyBox/Choices" instance=ExtResource( 28 )]
margin_right = 433.0
theme = null

[node name="ChoiceButton2" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ReplyBox/Choices" instance=ExtResource( 28 )]
margin_top = 48.0
margin_right = 433.0
margin_bottom = 86.0
theme = null
text = "Choice 2"

[node name="Button" type="Button" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/VBoxContainer/ReplyBox"]
margin_left = 437.0
margin_top = 24.0
margin_right = 509.0
margin_bottom = 62.0
size_flags_vertical = 4
text = "Send"

[node name="Timer" type="Timer" parent="HBoxContainer/TextureRect/VBoxContainer/Content/Chat"]
wait_time = 3.0
one_shot = true

[node name="BottomBar" type="ColorRect" parent="HBoxContainer/TextureRect/VBoxContainer"]
margin_top = 860.0
margin_right = 509.0
margin_bottom = 1024.0
rect_min_size = Vector2( 0, 164 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Taskbar" type="ColorRect" parent="HBoxContainer/TextureRect/VBoxContainer/BottomBar"]
anchor_right = 1.0
margin_right = 3.05176e-05
margin_bottom = 64.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="TextureButton" parent="HBoxContainer/TextureRect/VBoxContainer/BottomBar/Taskbar"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 254, 32 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 19 )
expand = true
stretch_mode = 5
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="ColorRect" parent="HBoxContainer"]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="HBoxContainer/TextureRect/VBoxContainer/Content/Music/VBoxContainer/MusicControls/Previous" to="HBoxContainer/TextureRect/VBoxContainer/Content/Music" method="_on_Previous_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureRect/VBoxContainer/Content/Music/VBoxContainer/MusicControls/PlayPause" to="HBoxContainer/TextureRect/VBoxContainer/Content/Music" method="_on_PlayPause_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureRect/VBoxContainer/Content/Music/VBoxContainer/MusicControls/Next" to="HBoxContainer/TextureRect/VBoxContainer/Content/Music" method="_on_Next_pressed"]
[connection signal="timeout" from="HBoxContainer/TextureRect/VBoxContainer/Content/Chat/Timer" to="HBoxContainer/TextureRect/VBoxContainer/Content/Chat" method="_on_Timer_timeout"]
[connection signal="pressed" from="HBoxContainer/TextureRect/VBoxContainer/BottomBar/Taskbar/HomeButton" to="." method="_on_HomeButton_pressed"]
